# entityframe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  publish.yml
docs/: contributing.md  index.md
docs/api/: index.md
docs/design/: algorithms.md  engine.md  foundations.md  implementation.md  interface.md  overview.md  principles.md  reference.md  roadmap.md
docs/stylesheets/: extra.css
src/: justfile
src/python/entityframe/: __init__.py  collection.py  entity.py  frame.py
src/python/starlings/: __init__.py  collection.py  debug.py  frame.py
src/rust/entityframe/: Cargo.toml
src/rust/entityframe/src/: collection.rs  entity.rs  frame.rs  hash.rs  interner.rs  lib.rs  tests.rs
src/rust/starlings/: Cargo.toml
src/rust/starlings-core/: Cargo.toml
src/rust/starlings-core/benches/: hierarchy_construction.rs  partition_reconstruction.rs  record_insertion.rs
src/rust/starlings-core/examples/: perf_test.rs
src/rust/starlings-core/src/: lib.rs  test_utils.rs
src/rust/starlings-core/src/core/: data_context.rs  record.rs
src/rust/starlings-core/src/hierarchy/: bitmap_pool.rs  builder.rs  merge_event.rs  mod.rs  union_find.rs
src/rust/starlings-py/: Cargo.toml
src/rust/starlings-py/src/: lib.rs
src/rust/starlings/benches/: hierarchy_construction.rs  partition_reconstruction.rs  record_insertion.rs
src/rust/starlings/src/: collection.rs  entity.rs  frame.rs  hash.rs  lib.rs
src/rust/starlings/src/core/: data_context.rs  key.rs  mod.rs
src/rust/starlings/src/hierarchy/: builder.rs  mod.rs  partition.rs
src/tests/: justfile  test_batch_hashing.py  test_bottleneck_analysis.py  test_collection_basic.py  test_core.py  test_dataset_scaling.py  test_detailed_profiling.py  test_dummy.py  test_e2e_workflow.py  test_entity_collection.py  test_entity_frame.py  test_final_performance_summary.py  test_hello.py  test_large_scale_performance.py  test_metadata.py  test_metadata_hash.py  test_optimization_comparison.py  test_parallel_overhead.py  test_parallel_overhead_analysis.py  test_performance.py  test_scale_optimization.py  test_scaling_bottleneck.py
src/tests/benchmarks/: __init__.py  justfile  test_bench_collections.py  test_performance_regression.py  test_scaling_benchmarks.py
src/tests/e2e/: test_e2e_workflow.py
