[project]
name = "entityframe"
version = "0.1.0"
description = "A Python package for comparing entity resolutions from different processes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = {file = "LICENSE"}
authors = [
    {name = "Will Langdale"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
keywords = ["entity-resolution", "data-processing", "rust"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src/python"
module-name = "entityframe._rust"
manifest-path = "src/rust/entityframe/Cargo.toml"

[dependency-groups]
dev = [
    "maturin>=1.8.6",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "entityframe._rust"
ignore_missing_imports = true

[tool.uv]
# Prevent uv sync from building the package - use just build instead
package = false
