[package]
name = "entityframe"
version = "0.1.0"
edition = "2021"

[lib]
name = "entityframe"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23" }
roaring = "0.10"
rustc-hash = "2.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }