[package]
name = "entityframe"
version = "0.1.0"
edition = "2021"

[lib]
name = "entityframe"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23" }
roaring = "0.10"
rustc-hash = "2.0"
digest = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
rayon = "1.10"
comfy-table = "7.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }