[package]
name = "starlings-core"
version = "0.1.0"
edition = "2021"

[dependencies]
roaring = "0.10"
rustc-hash = "2.0"
digest = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
rayon = "1.10"
comfy-table = "7.1"
string-interner = "0.17"
fxhash = "0.2"
lru = "0.12"
dashmap = "6.1"

[dev-dependencies]
criterion = "0.5"
fastrand = "2.0"

[[bench]]
name = "record_insertion"
harness = false

[[bench]]
name = "hierarchy_construction"
harness = false

[[bench]]
name = "partition_reconstruction"
harness = false