[package]
name = "starlings-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "starlings"
crate-type = ["cdylib"]

[dependencies]
starlings-core = { path = "../starlings-core" }
pyo3 = { version = "0.26", features = ["extension-module"] }
rustc-hash = "2.0"
rayon = "1.10"

[features]
# Extension module is always enabled for this crate
default = []